// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should render on desktop 1`] = `
<Fragment>
  <Connect(Top)
    open={false}
    toggleMobileNav={[Function]}
  />
  <div
    className="Aside"
  >
    <nav
      className="Navigation"
    >
      <div
        className="Wrapper"
      >
        <ul
          className="List"
          data-id="navigation-list"
        >
          <NavItem
            key="0"
            location="/foo/bar"
            mobile={false}
            toggleMobileNav={[Function]}
          />
          <NavItem
            key="1"
            location="/foo/bar"
            mobile={false}
            toggleMobileNav={[Function]}
          />
          <NavItem
            key="2"
            location="/foo/bar"
            mobile={false}
            toggleMobileNav={[Function]}
          />
        </ul>
      </div>
    </nav>
  </div>
</Fragment>
`;

exports[`Navigation should render on mobile 1`] = `
<Fragment>
  <div
    className="Overlay"
    onClick={[Function]}
  />
  <Connect(Top)
    open={false}
    toggleMobileNav={[Function]}
  />
  <div
    className="Aside mobile"
  >
    <nav
      className="Navigation mobile"
    >
      <div
        className="Wrapper"
      >
        <ul
          className="List mobile"
          data-id="navigation-list"
        >
          <NavItem
            key="0"
            location="/foo/bar"
            mobile={true}
            toggleMobileNav={[Function]}
          />
          <NavItem
            key="1"
            location="/foo/bar"
            mobile={true}
            toggleMobileNav={[Function]}
          />
          <NavItem
            key="2"
            location="/foo/bar"
            mobile={true}
            toggleMobileNav={[Function]}
          />
        </ul>
      </div>
    </nav>
  </div>
</Fragment>
`;

exports[`Navigation should render on mobile and open 1`] = `"Navigation mobile show"`;

exports[`Navigation should toggle menu when clicking overlay 1`] = `"Navigation mobile"`;
